--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -36,25 +36,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      STAGING_INFRA: ${{ secrets.STAGING_INFRA }}
-      PROD_INFRA: ${{ secrets.PROD_INFRA }}
-
     steps:
-      - name: Identify environment
-        run: |
-          echo Prod: "$PROD_INFRA"
-          echo Staging: "$STAGING_INFRA"
-
       # https://docs.github.com/en/actions/learn-github-actions/expressions#endswith
       # https://docs.github.com/en/actions/learn-github-actions/workflow-commands-for-github-actions#setting-an-environment-variable
       - name: Set env to staging
-        if: ${{ startsWith(github.ref, '/develop') && endsWith(github.ref, '/develop') && env.STAGING_INFRA == 'up' }}
+        if: ${{ startsWith(github.ref, '/develop') && endsWith(github.ref, '/develop') && !endsWith(github.event.head_commit.message, 'no-deploy') }}
         run: |
           echo "DEPLOY_ENV=staging" >> $GITHUB_ENV
 
       - name: Set env to prod
-        if: ${{ startsWith(github.ref, '/main') && endsWith(github.ref, '/main') && env.PROD_INFRA == 'up' }}
+        if: ${{ startsWith(github.ref, '/main') && endsWith(github.ref, '/main') && !endsWith(github.event.head_commit.message, 'no-deploy')  }}
         run: |
           echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
 
