--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -55,7 +55,4 @@ core-app:
 # https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
 logging:
   level:
-    com:
-      amazonaws:
-        util:
-          EC2MetadataUtils: error
+    com.amazonaws.util.EC2MetadataUtils: error
