chore: Update application.yml
- Explicitly state log level used by default
- improve config file formatting

--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -52,7 +52,9 @@ management:
 core-app:
   allowedOrigins: ${ALLOWED_ORIGINS}
 
-# https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
+# https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging:
   level:
+    root: info
+    # https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
     com.amazonaws.util.EC2MetadataUtils: error
