--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
 
   wcdevs_app:
     image: org.wcdevs.blog:core
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "80:8080"
       - "82:8082"
