ci: Update docker-compose.yml
- Add keycloak.rt service to lunch a different keycloak service during runtime (all services from docker containers). This is needed because from the container the app needs to access the keycloak server by the docker compose service name (keycloack) and then the app does some validation against the keycloak metadata, so the url inside the metadata must match the keycloak server url (in this case the docker-compose service name), hence it's was needed to "duplicate" this docke-compose service only to be used when the whole stack is run from docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,20 @@ services:
     volumes:
       - ./appmocks/wcdevs-realm.json:/tmp/wcdevs-realm.json
 
+  # another keycloak instance to use while running the whole stack -- the "keycloak" service cannot
+  # be re-used because the mock metadata contains some urls which depends on the docker-compose
+  # service name, and it would conflict with the "keycloak" service used for debugging purposes
+  keycloak.rt:
+    image: jboss/keycloak:15.0.2
+    environment:
+      - PORT_KEYCLOAK=8080
+      - KEYCLOAK_USER=keycloak
+      - KEYCLOAK_PASSWORD=keycloak
+      - DB_VENDOR=h2
+      - JAVA_OPTS= -Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/tmp/wcdevs-realm.json
+    volumes:
+      - ./appmocks/runtime-wcdevs-realm.json:/tmp/wcdevs-realm.json
+
   wcdevs_app:
     image: org.wcdevs.blog:core
     build:
