--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -155,6 +155,6 @@
       </plugin>
     </plugins>
 
-    <finalName>${project.groupId}-${project.artifactId}-${project.version}</finalName>
+    <finalName>${project.groupId}-${project.artifactId}</finalName>
   </build>
 </project>
