ci: Update keycloak docker services
- Remove keycloak.rt service
- Add override docker-compose files to change keycloak service properties in runtime (add docker-compose-override-keycloak-as-host.yml)
- Update docker-compose-override-mac.yml to match the new docker compose keycloak service
- Update README.md with instructions for the new keycloak mapping
- Update Run configs All_Runtime.run.xml and DB_Keycloak.run.xml
- U[date runtime-wcdevs-realm.json with new service name

--- a/docker-compose-override-keycloak-as-host.yml
+++ b/docker-compose-override-keycloak-as-host.yml
@@ -4,4 +4,5 @@ version: "3.9"
 services:
 
   keycloak.service:
-    image: sleighzy/keycloak:15.0.2-arm64
+    volumes:
+      - ./appmocks/runtime-wcdevs-realm.json:/tmp/wcdevs-realm.json
