--- a/rest/src/main/resources/application-local.yml
+++ b/rest/src/main/resources/application-local.yml
@@ -21,6 +21,11 @@ spring:
           # see http://localhost:8888/auth/realms/wcdevs/.well-known/openid-configuration
           issuerUri: http://localhost:8888/auth/realms/wcdevs
 
+cloud:
+  aws:
+    region:
+      static: eu-central-1
+
 server:
   port: 8080
 
