chore: Update application.yml
- Add cloud.aws.region.static to default application.yml so any other env doesn't fail for amazons3 bean creation
- Remove the same prop from local env

--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -39,6 +39,12 @@ management:
       cloudwatch:
         enabled: false
 
+
+cloud:
+  aws:
+    region:
+      static: eu-central-1
+
 core-app:
   allowedOrigins: ${ALLOWED_ORIGINS}
 
