--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -44,6 +44,13 @@ cloud:
   aws:
     region:
       static: eu-central-1
+    sns:
+      enabled: false
+    instance:
+      data:
+        enabled: false
+    stack:
+      auto: false
 
 core-app:
   allowedOrigins: ${ALLOWED_ORIGINS}
