--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <description>Core resources for org.wcdevs</description>
 
   <properties>
+    <!-- platform -->
     <java.version>11</java.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
