ci: Update Git Action to use maven wrapper
- Update Step 'Build with Maven' to run ./mvnw instead of mvn

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Build with Maven
         # -B,--batch-mode
         # see mvn --help for more info
-        run: mvn -B clean test --file pom.xml
+        run: ./mvnw -B clean test --file pom.xml
 
       - name: Codecov
         uses: codecov/codecov-action@v2
