ci: Update GitHub Actions
- Add dependency to org.wcdevs.blog.cdk
- Create `awsdeployer` submodule to hold the cloudformation instructions to deploy the app to the ECS
- Update GitHub Action send the deployment signal directly to aws from the job. An `if` had to be added to each deploy step to not execute them if the env is not for staging or prod, there's no way to "early"-exit the job, see https://github.com/actions/runner/issues/662
- Add `environment` and `dockerImageTag` as outputs from the `build` workflow
- Use java `temurin` distro as it's the same used to build the docker image
- Rename some steps with a better wording
- Update README.md
- Ignore node_modules folder

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <spring.version>2.7.1</spring.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
     <spring-cloud-aws.version>2.3.2</spring-cloud-aws.version>
+    <cdk-construct-version>3.0.1</cdk-construct-version>
 
     <!-- custom props -->
     <checkstyle-skip>false</checkstyle-skip>
@@ -34,6 +35,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.wcdevs.blog</groupId>
+        <artifactId>cdk</artifactId>
+        <version>${cdk-construct-version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -41,6 +47,7 @@
     <module>persistence</module>
     <module>common</module>
     <module>rest</module>
+    <module>awsdeployer</module>
   </modules>
 
   <build>
